# Tutorials

./: .gitignore
AI/GitHub Copilo - Prompt Templates/Instruction Files/: UnitTest_C++_GTest.md
AI/GitHub Copilo - Prompt Templates/Promp Files/: Workspace_C++.md
Android/: Android SDK Platform Tools.docx  IPCs Tutorial.docx
Atlassian/: Atlassian API Tutorial.docx
Books/: Links.txt
C#/: .NET Tutorial.docx  C# .NET API Dictionary.docx  C++ vs C#.docx  WPF Tutorial.docx
C-C++/: Analysis Tools.docx  Building Process Tutorial.docx  C++ MISRA Rules.docx  C++ OOP Experiences.docx  C++ SEI CERT Rules.docx  C++ STL Data Structure.docx  C-C++ Toolchain.docx  C-C++ Tutorial.docx  C-C++ VSCode.docx  Debug Tips.docx  Doxygen.docx  Effective C++.docx  Find and Fix Program Crash.docx  GTest Tutorial.docx  GTest.docx  Libraries.docx  MISRA Rules.docx  SEI CERT Rules.docx  save-as-snippet.code-snippets
C-C++/Clang/: .clang-format  Clang.docx
C-C++/Code_C++/GTest/: UT.txt
C-C++/Code_C++/GTest/1.quick_start/: CMakeLists.txt  hello_test.cc
C-C++/Code_C++/GoogleProtobuf/: addressbook.pb.cc
C-C++/Code_C++/JsonParser/: JsonParser.cpp  build.sh
C-C++/Code_C++/OperatorOverload/: date.cpp  notes.txt
C-C++/Code_C++/PosixSpawn/: main.c  output.txt
C-C++/Code_C++/TypeCastingInPolymophism/: Shape.h  main.cpp
C-C++/Demo C++/GTest/3.advanced_mock_with_PowerFake/ut/: CMakeLists.txt  turtle_activity_test.cpp
C-C++/Demo C++/GoogleProtobuf/: addressbook.pb.h  generate_code.cmd  reader.cpp  writer.cpp
C-C++/Demo C++/JsonParser/: Json Parser.docx  JsonParser.hpp  main.cpp  mock.json
C-C++/Demo C++/Lambda/: capture.cpp
C-C++/Demo C++/OperatorOverload/: date.h  main.cpp
C-C++/Demo C++/TypeCastingInPolymophism/: Point.cpp  Point.h  Shape.cpp
C-C++/Demo CMake/01-basic/G-compile-flags/: CMakeLists.txt  main.cpp
C-C++/Demo_CMake/01-basic/F-build-type/: CMakeLists.txt  main.cpp
C-C++/Demo_CMake/01-basic/M-target-visibility/: CMakeLists.txt
C-C++/Demo_CMake/01-basic/M-target-visibility/src/: util.cpp
C-C++/Demo_CMake/01-basic/N-using-cmake-file/: CMakeLists.txt
C-C++/Demo_CMake/CTest/: CMakeLists.txt
C-C++/Demo_CMake/CTest/include/: mylib.h
C-C++/Demo_CMake/CTest/src/: mylib.cpp
C-C++/Demo_CMake/CTest/test/: CMakeLists.txt  test_mylib.cpp
C-C++/Win32/: Win32 API Dictionary.docx  Win32 Tutorial.docx
Clean Code - Coding Conventions/: Clean Code.docx  Code Formatting Tools.docx
Data Structures - Algorithms/: Algorithms Tutorial.docx  Data Structure Tutorial.docx  Data Structures - Algorithms Tutorial.docx  Prompt.md
Data Structures - Algorithms/Demo/: Demo.sln
Data Structures - Algorithms/LG SWPCT/: docs.txt
Database/: Embedded Database Tutorial.docx  GPU Database Tutorial.docx  MongoDB Tutorial.docx  SQL Tutorial.docx
Design/: Design Experiences.docx  PlantUML Tutorial.docx  UML Diagram Tutorial.docx
Design/DesignPattern/BeverageMaking_Template/: BeverageMaking - Template.sln
Design/DesignPattern/ChocolateBoiler_Singleton/: ChocolateBoiler.sln
Design/DesignPattern/DuckAndTurkey_Adapter/: DuckAndTurkey - Adapter.sln
Design/DesignPattern/GumballMachine_State/: GumballMachine.cpp  GumballMachine.h  GumballMachine.vcxproj  HasQuarterState.cpp  IState.cpp  IState.h  NoQuarterState.cpp  SoldOutState.h  SoldState.cpp  StateManager.h  Utils.cpp  WinnerState.cpp  WinnerState.h  main.cpp
Design/DesignPattern/GumballMachine_State - SharedPointerVersion/: GumballMachine.cpp  GumballMachine.h  GumballMachine.vcxproj.filters  GumballMachine_StatePattern.sln  HasQuarterState.cpp  HasQuarterState.h  IState.cpp  IState.h  NoQuarterState.cpp  NoQuarterState.h  SoldState.cpp  SoldState.h  WinnerState.cpp  main.cpp
Design/DesignPattern/GumballMachine_State__WithStateManagerClass/: GumballMachine.cpp  (+13 more)
Design/Sphinx + PlantUML/: conf (JetDrive).py  conf.py  restructuredtext.json
DevOps/: Docker Tutorial.docx  Jenkins Tutorial.docx  Virtual Machine Tutorial.docx  Yocto Tutorial.docx
DevOps/Yocto/: Yocto Tutorial.docx
Electronics/: Karnaugh Maps.docx
Embedded Systems/: Embedded System Interview Questions.docx
Git/: Gerrit Tutorial.docx  Git Tutorial.docx
IDEs/Eclipse/: Eclipse Tutorial.docx
IDEs/Visual Studio/: VS Code Tutorial.docx  VSCode Extension Collection.docx  VSCode Extension Programming.docx  Visual Studio IDE.docx
IPC/: IPCs.docx  Iceoryx.docx  Primitive IPCs.docx  Protobuf Tutorial.docx  Protobuf.docx  SOMEIP.docx  Sockets.docx  SomeIP.docx
Interview Tips/: C++.docx  Interview Tips.docx
Linux/: Linux Logging.docx  Linux Tutorial.docx  Process and Thread.docx  Shell Script Tutorial.docx
MMO/: YouTube.docx
Network/: Communication Protocols.docx  Network Overview.docx  Network Package Capturing and Analyzing.docx
Objective-C++/: Objective-C Tutorial.docx  XCode + Instruments Tutorial.docx
Others/: Cam Nang Nghe Nghiep.docx  Car.txt  Helpful Software.docx  Hành lý bay quốc tế.xlsx  Learning Webs.txt  Must-Have Software.txt
Photography/: Photography Tutorial.docx
Project Management/: Notes.docx
Project Management/HowTo QA/: TheArtOfQnA.pptx
Python/: Analysis Tools.docx  Cython.docx  GUI with Python.docx  Python Tutorial.docx
Qt/: Qt Framework.docx
Qt/PySide/: PySide.docx
Regex/: Regex Tutorial.docx
Software Development Processes/: Jira Tutorial.docx  SW Development Process In Smart Business Unit.docx  Software Development Life Cycle (SDLC).docx
Software Development Processes/Agile/: Agile Tutorial.docx  Scrum Tutorial.docx
Software Development Processes/Scrum/: Scrum Tutorials.docx
Testing/: IT Test Template.xlsx  Testing Tutorial.docx  Unit Test Tutorial.docx
Testing/Behave/: Behave Tutorial.docx
Testing/Cucumber/: Cucumber Tutorial.docx
Testing/Robot Framework/: Robot Framework Tutorial.docx
VB/: 5G_StationData.xlsm  Salary Calculator.xlsm
Web/: Elastic Stack Tutorial.docx  HTML CSS Tutorial.docx  JavaScript Tutorial.docx  Web Basic Concepts.pptx
Web Scrapping/: Selenium Tutorial.docx  Web Scrapping Tutorial.docx
Windows/: Batch Script Tutorial.docx  PowerShell Tutorial.docx  Window Tutorial.docx
(+564 files in other folders)
